# langchain-notebooks

./: .gitignore  1_simple_llm.ipynb  2_chatbot.ipynb  4_agent.ipynb  5.1_rag_builtin.ipynb  5_rag.ipynb  6_conversational_rag.ipynb  7_rag_query_transformation.ipynb  README.md  pyproject.toml  requirements.txt
examples/: 0_rag_agent.ipynb  code_assistant.ipynb  rag_agent.ipynb
exampls/: agent.ipynb
langchain/: 10_graph_rag.ipynb  1_simple_llm.ipynb  2_chatbot.ipynb  3_vector_stores.ipynb  6_conversational_rag.ipynb  7_rag_query_transformation.ipynb
langgraph/: 1_graph_simple.ipynb  2_graph_memory.ipynb  3_graph_human_in_the_loop.ipynb  4_graph_update_state.ipynb  5.1_human_inputs.ipynb  5_graph_customize_state.ipynb  6_time_travel.ipynb  7.1_plan_n_execute.ipynb  7.2_ReWOO.ipynb  7.3_llm_compiler.ipynb  7_thinking.ipynb  8.1_collaboration.ipynb  8.2_multi-agent_supervisor.ipynb  README.md
langgraph/examples/customer_support/: customer_support.ipynb  database.py
langgraph/examples/customer_support/tools/: __init__.py  car_rentals.py  excursions.py  flights.py  hotels.py  policy.py
langserve/: client.py  serve.py
