[tool.poetry]
name = "langchain-notebooks"
version = "0.1.0"
description = ""
authors = ["clement.l <maple3312936@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
duckduckgo-search = "^6.2.11"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
python = "^3.11"
python-dotenv = "^1.0.1"
langchain-core = "^0.2.24"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.19"
langchain-anthropic = "^0.1.21"
langchain-chroma = "^0.1.2"
langchain-experimental = "^0.0.65"
langgraph = "^0.1.16"
langchainhub = "^0.1.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
